--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "my-app",
+  "name": "smiles-react-lgpd",
   "version": "0.1.0",
-  "private": true,
   "dependencies": {
+    "@smiles/core-smiles": "^0.2.32",
+    "@smiles/smiles-ui-kit-react": "^0.4.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "i18next": "^20.3.1",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-i18next": "^11.11.0",
     "react-scripts": "4.0.3",
+    "reactstrap": "^8.9.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
